--- a/suche.html
+++ b/suche.html
@@ -51,6 +51,9 @@
             </div>
         </form>
     </div>
+    <div class="container">
+        <h1>Ergebnisse</h1>
+        </div>
     <script src="script.js"></script>
 </body>
 </html>
