--- a/suche.html
+++ b/suche.html
@@ -7,53 +7,56 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1>FörderAlert</h1>
-        <form id="foerderalertForm">
-            <label for="name">Name Suchauftrag</label>
-            <input type="text" id="name" name="name" placeholder="...">
+    <div class="main-container">
+        <div class="container">
+            <h1>FörderAlert</h1>
+            <form id="foerderalertForm">
+                <label for="name">Name Suchauftrag</label>
+                <input type="text" id="name" name="name" placeholder="...">
 
-            <label for="email">E-Mail</label>
-            <input type="email" id="email" name="email" placeholder="...">
+                <label for="email">E-Mail</label>
+                <input type="email" id="email" name="email" placeholder="...">
 
-            <label for="foerderart">Förderart</label>
-            <select id="foerderart" name="foerderart">
-                <option value="">...</option>
-                <option value="beteiligung">Beteiligung</option>
-                <option value="buergschaft">Bürgschaft</option>
-            </select>
+                <label for="foerderart">Förderart</label>
+                <select id="foerderart" name="foerderart">
+                    <option value="">...</option>
+                    <option value="beteiligung">Beteiligung</option>
+                    <option value="buergschaft">Bürgschaft</option>
+                </select>
 
-            <div class="checkbox-group">
-                <label><input type="checkbox" name="foerderart" value="zuschuss"> Zuschuss</label>
-                <label><input type="checkbox" name="foerderart" value="garantie"> Garantie</label>
-                <label><input type="checkbox" name="foerderart" value="darlehen"> Darlehen</label>
-                <label><input type="checkbox" name="foerderart" value="sonstiges"> Sonstiges</label>
-            </div>
+                <div class="checkbox-group">
+                    <label><input type="checkbox" name="foerderart" value="zuschuss"> Zuschuss</label>
+                    <label><input type="checkbox" name="foerderart" value="garantie"> Garantie</label>
+                    <label><input type="checkbox" name="foerderart" value="darlehen"> Darlehen</label>
+                    <label><input type="checkbox" name="foerderart" value="sonstiges"> Sonstiges</label>
+                </div>
 
-            <label for="foerderbereich">Förderbereich</label>
-            <input type="text" id="foerderbereich" name="foerderbereich" placeholder="...">
+                <label for="foerderbereich">Förderbereich</label>
+                <input type="text" id="foerderbereich" name="foerderbereich" placeholder="...">
 
-            <label for="foerdergebiet">Fördergebiet</label>
-            <input type="text" id="foerdergebiet" name="foerdergebiet" placeholder="...">
+                <label for="foerdergebiet">Fördergebiet</label>
+                <input type="text" id="foerdergebiet" name="foerdergebiet" placeholder="...">
 
-            <label for="foerderberechtigt">Förderberechtigt</label>
-            <input type="text" id="foerderberechtigt" name="foerderberechtigt" placeholder="...">
+                <label for="foerderberechtigt">Förderberechtigt</label>
+                <input type="text" id="foerderberechtigt" name="foerderberechtigt" placeholder="...">
 
-            <label for="foerdergeber">Fördergeber</label>
-            <input type="text" id="foerdergeber" name="foerdergeber" placeholder="...">
+                <label for="foerdergeber">Fördergeber</label>
+                <input type="text" id="foerdergeber" name="foerdergeber" placeholder="...">
 
-            <label for="sonstiges">Sonstiges</label>
-            <input type="text" id="sonstiges" name="sonstiges" placeholder="...">
+                <label for="sonstiges">Sonstiges</label>
+                <input type="text" id="sonstiges" name="sonstiges" placeholder="...">
 
-            <div class="button-group">
-                <button type="submit">Suche</button>
-                <button type="button" onclick="createSearchRequest()">Suchauftrag erstellen</button>
-            </div>
-        </form>
-    </div>
-    <div class="container">
-        <h1>Ergebnisse</h1>
+                <div class="button-group">
+                    <button type="submit">Suche</button>
+                    <button type="button" onclick="createSearchRequest()">Suchauftrag erstellen</button>
+                </div>
+            </form>
         </div>
+        <div class="container">
+            <h1>Ergebnisse</h1>
+            <!-- Add any additional content for the results here -->
+        </div>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
