--- a/suchauftrag1.html
+++ b/suchauftrag1.html
@@ -12,10 +12,10 @@
             <h1>FörderAlert</h1>
             <form id="foerderalertForm">
                 <label for="name">Name Suchauftrag</label>
-                <input type="text" id="name" name="name" placeholder="...">
+                <input type="text" id="name" name="name" placeholder="Containermanagement">
 
                 <label for="email">E-Mail</label>
-                <input type="email" id="email" name="email" placeholder="...">
+                <input type="email" id="email" name="email" placeholder="Paul.Dammann@bremenports.de">
 
                 <label for="foerderart">Förderart</label>
                 <select id="foerderart" name="foerderart">
@@ -25,20 +25,20 @@
                 </select>
 
                 <div class="checkbox-group">
-                    <label><input type="checkbox" name="foerderart" value="zuschuss"> Zuschuss</label>
-                    <label><input type="checkbox" name="foerderart" value="garantie"> Garantie</label>
+                    <label><input type="checkbox" name="foerderart" value="zuschuss" checked> Zuschuss</label>
+                    <label><input type="checkbox" name="foerderart" value="garantie" checked> Garantie</label>
                     <label><input type="checkbox" name="foerderart" value="darlehen"> Darlehen</label>
                     <label><input type="checkbox" name="foerderart" value="sonstiges"> Sonstiges</label>
                 </div>
 
                 <label for="foerderbereich">Förderbereich</label>
-                <input type="text" id="foerderbereich" name="foerderbereich" placeholder="...">
+                <input type="text" id="foerderbereich" name="foerderbereich" placeholder="Hafenwirtschaft">
 
                 <label for="foerdergebiet">Fördergebiet</label>
-                <input type="text" id="foerdergebiet" name="foerdergebiet" placeholder="...">
+                <input type="text" id="foerdergebiet" name="foerdergebiet" placeholder="Deutschland">
 
                 <label for="foerderberechtigt">Förderberechtigt</label>
-                <input type="text" id="foerderberechtigt" name="foerderberechtigt" placeholder="...">
+                <input type="text" id="foerderberechtigt" name="foerderberechtigt" placeholder="Unternehmen">
 
                 <label for="foerdergeber">Fördergeber</label>
                 <input type="text" id="foerdergeber" name="foerdergeber" placeholder="...">
