--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         
         <div class="search-orders">
             <div class="checkbox-group">
-                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"> Suchauftrag 1</label>
+                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"><a href="https://pdmmnn.github.io/suchauftrag1.html">Suchauftrag 1</a></label>
                 <label><input type="checkbox" name="searchOrder" value="suchauftrag2"> Suchauftrag 2</label>
                 <label><input type="checkbox" name="searchOrder" value="suchauftrag3"> Suchauftrag 3</label>
             </div>
         </div>
 
         <div class="button-group">
-            <button type="button" onclick="createNewSearchOrder()">Neuen Suchauftrag anlegen</button>
+            <a href="https://pdmmnn.github.io/suche.html"><button type="button" onclick="createNewSearchOrder()">Neuen Suchauftrag anlegen</button></a>
             <button type="button" onclick="cancelSelectedSearchOrders()" class="cancel-button">Markierte Suchaufträge abbestellen</button>
         </div>
     </div>
