--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <div class="search-orders">
             <div class="checkbox-group">
-                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"><a href="https://pdmmnn.github.io/suchauftrag1.html">Suchauftrag 1</a></label>
+                <label><input type="checkbox" name="searchOrder" value="suchauftrag1">Suchauftrag 1</label><a href="https://pdmmnn.github.io/suchauftrag1.html">öffnen</a>
                 <label><input type="checkbox" name="searchOrder" value="suchauftrag2"> Suchauftrag 2</label>
                 <label><input type="checkbox" name="searchOrder" value="suchauftrag3"> Suchauftrag 3</label>
             </div>
