--- a/suche.html
+++ b/suche.html
@@ -9,7 +9,7 @@
 <body>
     <div class="main-container">
         <div class="container">
-            <a href="https://pdmmnn.github.io"><h1>FörderAlert</h1></a>
+            <h1 href="https://pdmmnn.github.io">FörderAlert</h1>
             <form id="foerderalertForm">
                 <label for="name">Name Suchauftrag</label>
                 <input type="text" id="name" name="name" placeholder="...">
