--- a/suche.html
+++ b/suche.html
@@ -40,6 +40,11 @@
                 <label for="sonstiges">Sonstiges</label>
                 <input type="text" id="sonstiges" name="sonstiges" placeholder="...">
 
+                <!-- Search Bar for Recommendations -->
+                <label for="searchbar">Search Terms</label>
+                <input type="text" id="searchbar" name="searchbar" placeholder="Start typing...">
+                <div id="dropdown" class="dropdown-content"></div>
+
                 <div class="button-group">
                     <button type="submit">Suche</button>
                     <button type="button" onclick="createSearchRequest()">Suchauftrag erstellen</button>
