--- a/suche3.html
+++ b/suche3.html
@@ -43,7 +43,7 @@
                 <label for="foerdergeber">Fördergeber</label>
                 <input type="text" id="foerdergeber" name="foerdergeber" placeholder="...">
 
-                <label for="sonstiges">Sonstiges</label>
+                <label for="sonstiges">Spezifische Suchbegriffe</label>
                 <input type="text" id="sonstiges" name="sonstiges" placeholder="...">
 
                 <!-- Search Bar for Recommendations -->
