--- a/suche2.html
+++ b/suche2.html
@@ -17,14 +17,8 @@
                 <label for="email">E-Mail</label>
                 <input type="email" id="email" name="email" placeholder="...">
 
-                <label for="foerderart">Förderart</label>
-                <select id="foerderart" name="foerderart">
-                    <option value="">...</option>
-                    <option value="beteiligung">Beteiligung</option>
-                    <option value="buergschaft">Bürgschaft</option>
-                </select>
-
                 <div class="checkbox-group">
+                <label for="foerderart">Förderart</label>
                     <label><input type="checkbox" name="foerderart" value="zuschuss"> Zuschuss</label>
                     <label><input type="checkbox" name="foerderart" value="garantie"> Garantie</label>
                     <label><input type="checkbox" name="foerderart" value="darlehen"> Darlehen</label>
@@ -43,8 +37,23 @@
                 <label for="foerdergeber">Fördergeber</label>
                 <input type="text" id="foerdergeber" name="foerdergeber" placeholder="...">
 
-                <label for="sonstiges">Sonstiges</label>
+                <label for="sonstiges">Spezifische Suchbegriffe</label>
                 <input type="text" id="sonstiges" name="sonstiges" placeholder="...">
+
+                 <!-- Search Bar for Recommendations -->
+                <label for="searchbar">Search Terms</label>
+                <input type="text" id="searchbar" name="searchbar" placeholder="Start typing...">
+                <div id="dropdown" class="dropdown-content"></div>
+                
+                <!-- Search Bar for Fördergebiet -->
+                <label for="foerdergebietbar">Fördergebiet</label>
+                <input type="text" id="foerdergebietbar" name="foerdergebietbar" placeholder="Start typing...">
+                <div id="dropdown-foerdergebiet" class="dropdown-content"></div>
+                
+                <!-- Search Bar for Fördergeber -->
+                <label for="foerdergeberbar">Fördergeber</label>
+                <input type="text" id="foerdergeberbar" name="foerdergeberbar" placeholder="Start typing...">
+                <div id="dropdown-foerdergeber" class="dropdown-content"></div>
 
                 <div class="button-group">
                     <button type="submit">Suche</button>
@@ -57,6 +66,6 @@
             <!-- Add any additional content for the results here -->
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="suche2.js"></script>
 </body>
 </html>
