--- a/suche2.html
+++ b/suche2.html
@@ -25,35 +25,33 @@
                     <label><input type="checkbox" name="foerderart" value="sonstiges"> Sonstiges</label>
                 </div>
 
-                <label for="foerderbereich">Förderbereich</label>
-                <input type="text" id="foerderbereich" name="foerderbereich" placeholder="...">
-
-                <label for="foerdergebiet">Fördergebiet</label>
-                <input type="text" id="foerdergebiet" name="foerdergebiet" placeholder="...">
-
-                <label for="foerderberechtigt">Förderberechtigt</label>
-                <input type="text" id="foerderberechtigt" name="foerderberechtigt" placeholder="...">
-
-                <label for="foerdergeber">Fördergeber</label>
-                <input type="text" id="foerdergeber" name="foerdergeber" placeholder="...">
-
-                <label for="sonstiges">Spezifische Suchbegriffe</label>
-                <input type="text" id="sonstiges" name="sonstiges" placeholder="...">
-
                  <!-- Search Bar for Recommendations -->
                 <label for="searchbar">Search Terms</label>
-                <input type="text" id="searchbar" name="searchbar" placeholder="Start typing...">
+                <input type="text" id="searchbar" name="searchbar" placeholder="...">
                 <div id="dropdown" class="dropdown-content"></div>
+
+                <!-- Search Bar for Förderbereich -->
+                <label for="foerderbereichbar">Förderbereich</label>
+                <input type="text" id="foerderbereichbar" name="foerderbereichbar" placeholder="...">
+                <div id="dropdown-foerderbereich" class="dropdown-content"></div>
+
+                <!-- Search Bar for Förderberechtigt -->
+                <label for="foerderberechtigtbar">Förderberechtigt</label>
+                <input type="text" id="foerderberechtigtbar" name="foerderberechtigtbar" placeholder="...">
+                <div id="dropdown-foerderberechtigt" class="dropdown-content"></div>
                 
                 <!-- Search Bar for Fördergebiet -->
                 <label for="foerdergebietbar">Fördergebiet</label>
-                <input type="text" id="foerdergebietbar" name="foerdergebietbar" placeholder="Start typing...">
+                <input type="text" id="foerdergebietbar" name="foerdergebietbar" placeholder="...">
                 <div id="dropdown-foerdergebiet" class="dropdown-content"></div>
                 
                 <!-- Search Bar for Fördergeber -->
                 <label for="foerdergeberbar">Fördergeber</label>
-                <input type="text" id="foerdergeberbar" name="foerdergeberbar" placeholder="Start typing...">
+                <input type="text" id="foerdergeberbar" name="foerdergeberbar" placeholder="...">
                 <div id="dropdown-foerdergeber" class="dropdown-content"></div>
+
+                <label for="sonstiges">Spezifische Suchbegriffe</label>
+                <input type="text" id="sonstiges" name="sonstiges" placeholder="Suchbegriff, Suchbegri*, *uchbegri*, Su*griff, Suchbegriff AND Suchbegriff, Suchbegriff OR (Suchbegriff AND Suchbegriff)">
 
                 <div class="button-group">
                     <button type="submit">Suche</button>
