--- a/suche.html
+++ b/suche.html
@@ -56,6 +56,6 @@
             <!-- Add any additional content for the results here -->
         </div>
     </div>
-    <script src="suche.js"></script>
+    <script src="suche0.js"></script>
 </body>
 </html>
