--- a/containermanagement.html
+++ b/containermanagement.html
@@ -51,6 +51,6 @@
             <!-- Add any additional content for the results here -->
         </div>
     </div>
-    <script src="script.js"></script>
+    <script src="script0.js"></script>
 </body>
 </html>
