Update and rename suche2.html to suche.html

--- a/suche.html
+++ b/suche.html
@@ -64,6 +64,6 @@
             <!-- Add any additional content for the results here -->
         </div>
     </div>
-    <script src="suche2.js"></script>
+    <script src="suche.js"></script>
 </body>
 </html>
