--- a/suche18.html
+++ b/suche18.html
@@ -39,7 +39,7 @@
             <!-- Add any additional content for the results here -->
         </div>
     </div>
-    <script src="script18.js"></script>
+    <script src="suche18.js"></script>
     <script>
         // Fetch the search terms JSON file and initialize the search bars
         fetch('search_terms.json')
