--- a/suche.html
+++ b/suche.html
@@ -26,9 +26,14 @@
                 </div>
 
                  <!-- Search Bar for Recommendations -->
-                <label for="searchbar">Search Terms</label>
+                <!-- <label for="searchbar">Search Terms</label>
                 <input type="text" id="searchbar" name="searchbar" placeholder="...">
-                <div id="dropdown" class="dropdown-content"></div>
+                <div id="dropdown" class="dropdown-content"></div> -->
+                
+                 <!-- Search Bar for Förderart -->
+                <label for="foerderartbar">Förderart</label>
+                <input type="text" id="foerderartbar" name="foerderartbar" placeholder="...">
+                <div id="dropdown-foerderart" class="dropdown-content"></div>
 
                 <!-- Search Bar for Förderbereich -->
                 <label for="foerderbereichbar">Förderbereich</label>
