--- a/suche.html
+++ b/suche.html
@@ -26,9 +26,9 @@
                 </div>
 
                  <!-- Search Bar for Recommendations -->
-                <!-- <label for="searchbar">Search Terms</label>
+                <label for="searchbar">Search Terms</label>
                 <input type="text" id="searchbar" name="searchbar" placeholder="...">
-                <div id="dropdown" class="dropdown-content"></div> -->
+                <div id="dropdown" class="dropdown-content"></div>
                 
                  <!-- Search Bar for Förderart -->
                 <label for="foerderartbar">Förderart</label>
