--- a/suche.html
+++ b/suche.html
@@ -64,10 +64,37 @@
                 </div>
             </form>
         </div>
-        <div class="container">
+
+<div class="container">
             <h1>Ergebnisse</h1>
-            <!-- Add any additional content for the results here -->
+            <div class="results">
+                <!-- Result item 1 -->
+                <div class="result-item">
+                    <h2>Programm X - Datenquelle</h2>
+                    <p>Stichwörter, Stichwörter, Stichwörter</p>
+                    <div class="result-details">
+                        <span>Förderart: Garantie</span>
+                        <span>Förderbereich: Hafen</span>
+                        <span>Förderberechtigt: Kommunen</span>
+                        <span>Fördergebiet: Deutschland</span>
+                        <span>Fördergeber: KFW</span>
+                    </div>
+                </div>
+                <!-- Result item 2 -->
+                <div class="result-item">
+                    <h2>Programm X - Datenquelle</h2>
+                    <p>Stichwörter, Stichwörter, Stichwörter</p>
+                    <div class="result-details">
+                        <span>Förderart: Zuschuss</span>
+                        <span>Förderbereich: Infrastruktur</span>
+                        <span>Förderberechtigt: Unternehmen</span>
+                        <span>Fördergebiet: Bremen</span>
+                        <span>Fördergeber: Bundesministerium für Finanzen</span>
+                    </div>
+                </div>
+            </div>
         </div>
+        
     </div>
     <script src="suche.js"></script>
 </body>
