--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         
         <div class="search-orders">
             <div class="checkbox-group">
-                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"> Containermanagement <a href="https://pdmmnn.github.io/containermanagement.html">öffnen</a></label>
+                <label><input type="checkbox" name="searchOrder" value="suchauftrag1"> Infrastruktur <a href="https://pdmmnn.github.io/infrastruktur.html">öffnen</a></label>
                 <label><input type="checkbox" name="searchOrder" value="suchauftrag2"> Suchauftrag 2</label>
                 <label><input type="checkbox" name="searchOrder" value="suchauftrag3"> Suchauftrag 3</label>
             </div>
