--- a/api.html
+++ b/api.html
@@ -13,6 +13,6 @@
     </form>
     <div id="results"></div>
 
-    <script src="app.js"></script>
+    <script src="api.js"></script>
 </body>
 </html>
