--- a/suche19.html
+++ b/suche19.html
@@ -62,6 +62,6 @@
             <div id="results" class="results"></div>
         </div>
     </div>
-    <script src="suche.js"></script>
+    <script src="suche19.js"></script>
 </body>
 </html>
