--- a/suche19.html
+++ b/suche19.html
@@ -18,15 +18,15 @@
                 <input type="email" id="email" name="email" placeholder="...">
 
                 <!-- Search Bar for Recommendations -->
-                <label for="searchbar">Search Terms</label>
+                <label for="searchbar">Förderart</label>
                 <input type="text" id="searchbar" name="searchbar" placeholder="...">
                 <div id="dropdown" class="dropdown-content"></div>
                 
-                <!-- Search Bar for Förderart -->
+                <!-- Search Bar for Förderart 
                 <label for="foerderartbar">Förderart<i id="tooltip-foerdergeber" class="tooltip-icon">i</i></label>
 <span id="tooltip-text-foerdergeber" class="tooltip-text">Wenn Suchbegriffe in diesem Feld mit Leerzeichen getrennt sind, wird nach Programmen gesucht, welche beide Suchbegriffe enthalten. Wenn Suchbegriffe mit Kommata getrennt sind, wird nach Programmen gesucht, die eines oder mehrere der Suchbegriffe enthalten.</span>
                 <input type="text" id="foerderartbar" name="foerderartbar" placeholder="...">
-                <div id="dropdown-foerderart" class="dropdown-content"></div>
+                <div id="dropdown-foerderart" class="dropdown-content"></div>-->
 
                 <!-- Search Bar for Förderbereich -->
                 <label for="foerderbereichbar">Förderbereich<i id="tooltip-foerdergeber" class="tooltip-icon">i</i></label>
