--- a/suche195.html
+++ b/suche195.html
@@ -24,6 +24,14 @@
                     <span> - </span>
                     <input type="number" id="maxAmount" name="maxAmount" placeholder="Max">
                 </div>
+
+                <!-- Search Bar for Förderanteil -->
+                <label for="foerderanteil">Förderanteil</label>
+                <div class="search-range">
+                <input type="number" id="percentageMin" name="percentageMin" placeholder="Min">
+                <span> - </span>
+                <input type="number" id="percentageMax" name="percentageMax" placeholder="Max">
+                </div>
                 
                 <!-- Search Bar for Förderart -->
                 <label for="foerderartbar">Förderart</label>
