--- a/suche195.html
+++ b/suche195.html
@@ -18,7 +18,7 @@
                 <input type="email" id="email" name="email" placeholder="...">
 
                 <!-- Search Bar for Förderhöhe -->
-                <label for="searchbar">Förderhöhe</label>
+                <label for="searchbar">Förderhöhe in Euro</label>
                 <div class="search-range">
                     <input type="number" id="minAmount" name="minAmount" placeholder="Min">
                     <span> - </span>
@@ -26,7 +26,7 @@
                 </div>
 
                 <!-- Search Bar for Förderanteil -->
-                <label for="foerderanteil">Förderanteil</label>
+                <label for="foerderanteil">Förderanteil in Prozent</label>
                 <div class="search-range">
                 <input type="number" id="percentageMin" name="percentageMin" placeholder="Min">
                 <span> - </span>
