--- a/suche195.html
+++ b/suche195.html
@@ -66,6 +66,10 @@
                     <button type="button" onclick="createSearchRequest()">Suchauftrag erstellen</button>
                 </div>
             </form>
+            <!-- Progress Bar -->
+<div id="progress-bar-container" style="display: none;">
+    <div id="progress-bar" style="width: 0%; height: 20px; background-color: #4caf50;"></div>
+</div>
         </div>
 
         <div class="container">
