--- a/suche195.html
+++ b/suche195.html
@@ -68,7 +68,7 @@
             </form>
             <!-- Progress Bar -->
 <div id="progress-bar-container" style="display: none;">
-    <div id="progress-bar" style="width: 0%; height: 20px; background-color: #4caf50;"></div>
+    <progress id="progress-bar" value="0" max="100"></progress>
 </div>
         </div>
 
