--- a/suche195.html
+++ b/suche195.html
@@ -66,9 +66,8 @@
                     <button type="button" onclick="createSearchRequest()">Suchauftrag erstellen</button>
                 </div>
             </form>
-            <!-- Progress Bar -->
-<div id="progress-bar-container" style="display: none;">
-    <progress id="progress-bar" value="0" max="100"></progress>
+            <div id="progress-bar-container">
+    <div id="progress-bar"></div>
 </div>
         </div>
 
