--- a/suche195.html
+++ b/suche195.html
@@ -59,7 +59,7 @@
                 <div id="dropdown-foerdergeber" class="dropdown-content"></div>
 
                 <label for="sonstiges">Spezifische Suchbegriffe</label>
-                <input type="text" id="sonstiges" name="sonstiges" placeholder="Suchbegriff, Suchbegri*, *uchbegri*, Su*griff, Suchbegriff AND Suchbegriff, Suchbegriff OR (Suchbegriff AND Suchbegriff)">
+                <input type="text" id="sonstiges" name="sonstiges" placeholder="...">
 
                 <div class="button-group">
                     <button type="submit">Suche</button>
