--- a/frontendForFlask.html
+++ b/frontendForFlask.html
@@ -73,8 +73,7 @@
         </div>
     </div>
 
-    <script>
-        
-    </script>
+    <script src="frontendForFlask.js"></script>
+    
 </body>
 </html>
