--- a/suche2-0.html
+++ b/suche2-0.html
@@ -73,6 +73,6 @@
             <div id="results" class="results"></div>
         </div>
     </div>
-    <script src="suche195.js"></script>
+    <script src="suche2-0.js"></script>
 </body>
 </html>
