--- a/suche2-1.html
+++ b/suche2-1.html
@@ -73,7 +73,7 @@
             <div id="results" class="results"></div>
         </div>
     </div>
-    <script src="suche2-0.js">
+    <script>
 
 document.getElementById('foerderalertForm').addEventListener('submit', function(event) {
         event.preventDefault();
